--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
@@ -114,7 +114,8 @@
                 p.DisplayFormatString = "N2";
             });
         });
-
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_ValorPago").DisplayFormat = "Total: {0:n2}";
+        settings.Settings.ShowFooter = true;
         settings.ClientSideEvents.EndCallback = "function (s,e){CalcularSaldo();}";
     });
 }
