--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
@@ -33,13 +33,6 @@
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
-            column.FieldName = "IdCbte_vta_nota";
-            column.Caption = "ID";
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Width = Unit.Percentage(10);
             column.FieldName = "vt_NumDocumento";
             column.Caption = "# Documento";
             column.EditFormSettings.Visible = DefaultBoolean.False;
@@ -113,6 +106,14 @@
                 p.DisplayFormatInEditMode = true;
                 p.DisplayFormatString = "N2";
             });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "Saldo_final";
+            column.Caption = "Saldo";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_ValorPago").DisplayFormat = "Total: {0:n2}";
         settings.Settings.ShowFooter = true;
