--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="CodTipoNota">Código*</label>
+                    <label for="CodTipoNota">Código</label>
                     @Html.TextBoxFor(q => q.CodTipoNota, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.CodTipoNota, "", new { @class = "form", @role = "text-danger" })
                 </div>
