--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Nuevo.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="Cod_cliente_tipo">Código</label>
+                    <label for="Cod_cliente_tipo">Código*</label>
                     @Html.TextBoxFor(q => q.Cod_cliente_tipo, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Cod_cliente_tipo, "", new { @class = "text-danger" })
                 </div>
