--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Anular.cshtml
@@ -22,42 +22,53 @@
             </div>
         </div>
     </div>
-        <div class="row">
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="nom_TerminoPago">Descripción*</label>
-                        @Html.TextBoxFor(q => q.nom_TerminoPago, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.nom_TerminoPago, "", new { @class = "text-danger" })
-                    </div>
+                <div class="form-group">
+                    <label for="nom_TerminoPago">Descripción*</label>
+                    @Html.TextBoxFor(q => q.nom_TerminoPago, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.nom_TerminoPago, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="Num_Coutas">Cuotas*</label>
-                        @Html.TextBoxFor(q => q.Num_Coutas, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Num_Coutas, "", new { @class = "text-danger" })
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Num_Coutas">Cuotas*</label>
+                    @Html.TextBoxFor(q => q.Num_Coutas, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Num_Coutas, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="Dias_Vct">Días*</label>
-                        @Html.TextBoxFor(q => q.Dias_Vct, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Dias_Vct, "", new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Dias_Vct">Días*</label>
+                    @Html.TextBoxFor(q => q.Dias_Vct, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Dias_Vct, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="box-footer">
-            <button type="submit" class="btn btn-danger">Anular</button>
-            <a class="btn btn-default" href="@Url.Action("Index", "TerminoPago", new { Area = "Facturacion" }, null)">Cancelar</a>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+
+                    @Html.Action("GridViewPartial_pago_dist")
+
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="box-footer">
+        <button type="submit" class="btn btn-danger">Anular</button>
+        <a class="btn btn-default" href="@Url.Action("Index", "TerminoPago", new { Area = "Facturacion" }, null)">Cancelar</a>
+    </div>
 
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
