--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Modificar.cshtml
@@ -10,54 +10,65 @@
 
 @using (Html.BeginForm("Modificar", "TerminoPago", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-@Html.HiddenFor(q=>q.IdTerminoPago)
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="IdTerminoPago">Código*</label>
-                        @Html.TextBoxFor(q => q.IdTerminoPago, new { @class = "form-control", @readonly ="readonly"})
-                        @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
-                    </div>
+    @Html.HiddenFor(q => q.IdTerminoPago)
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdTerminoPago">Código*</label>
+                    @Html.TextBoxFor(q => q.IdTerminoPago, new { @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="nom_TerminoPago">Descripción*</label>
-                        @Html.TextBoxFor(q => q.nom_TerminoPago, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.nom_TerminoPago, "", new { @class = "text-danger" })
-                    </div>
+                <div class="form-group">
+                    <label for="nom_TerminoPago">Descripción*</label>
+                    @Html.TextBoxFor(q => q.nom_TerminoPago, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.nom_TerminoPago, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="Num_Coutas">Cuotas*</label>
-                        @Html.TextBoxFor(q => q.Num_Coutas, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Num_Coutas, "", new { @class = "text-danger" })
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Num_Coutas">Cuotas*</label>
+                    @Html.TextBoxFor(q => q.Num_Coutas, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Num_Coutas, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="Dias_Vct">Días*</label>
-                        @Html.TextBoxFor(q => q.Dias_Vct, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Dias_Vct, "", new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Dias_Vct">Días*</label>
+                    @Html.TextBoxFor(q => q.Dias_Vct, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Dias_Vct, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <a class="btn btn-default" href="@Url.Action("Index", "TerminoPago", new { Area = "Facturacion" }, null)">Cancelar</a>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+
+                    @Html.Action("GridViewPartial_pago_dist")
+
+                </div>
+            </div>
         </div>
-    
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+    </div>
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index", "TerminoPago", new { Area = "Facturacion" }, null)">Cancelar</a>
+    </div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
     }
+}
