--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/_GridViewPartial_pago_dist.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/_GridViewPartial_pago_dist.cshtml
@@ -5,8 +5,6 @@
     {
         settings.Name = "GridView_pago_dist";
         settings.CallbackRouteValues = new { Controller = "TerminoPago", Action = "GridViewPartial_pago_dist", IdTerminoPago = Model == null ? 0 : Model.IdTerminoPago };
-
-
         settings.KeyFieldName = "IdTerminoPago";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
@@ -33,14 +31,39 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["Facturacion"] = "";
-            e.NewValues["IdCtaCble"] = 0;
+            e.NewValues["IdTerminoPago"] = "";
+            e.NewValues["Secuencia"] = 0;
+            e.NewValues["Num_Dias_Vcto"] = 0;
+            e.NewValues["Por_distribucion"] = 0;
         };
-
-        settings.Columns.Add("IdTerminoPago");
-        settings.Columns.Add("Secuencia");
-        settings.Columns.Add("Num_Dias_Vcto");
-        settings.Columns.Add("Por_distribucion");
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdTerminoPago";
+            column.Caption = "Id*";
+            column.Width = Unit.Percentage(20);
+            column.ColumnType = MVCxGridViewColumnType.TextBox;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Secuencia";
+            column.Caption = "Secuencia*";
+            column.Width = Unit.Percentage(20);
+            column.ColumnType = MVCxGridViewColumnType.TextBox;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Num_Dias_Vcto";
+            column.Caption = "Dias vcto*";
+            column.Width = Unit.Percentage(20);
+            column.ColumnType = MVCxGridViewColumnType.TextBox;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Por_distribucion";
+            column.Caption = "Por distribución*";
+            column.Width = Unit.Percentage(20);
+            column.ColumnType = MVCxGridViewColumnType.TextBox;
+        });
     });
 }
-@grid.Bind(Model).GetHtml()
+@grid.Bind(Model.Lst_fa_TerminoPago_Distribucion).GetHtml()
