--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -43,12 +43,40 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 $("#myform").submit();
+
             },
             error: function (error) {
             }
         });
         $("#btn_guardar").disabled = false;
     }
+
+    function seleccionar_aprobacion() {
+        var datos = {
+            Ids: selectedIDs
+        }
+        $("#btn_guardar").disabled = true;
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("seleccionar_aprobacion","Deudas", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $("#myform").submit();
+                GridView_aprobacion_facturas.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+        $("#btn_guardar").disabled = false;
+    }
+
+    
 </script>
 
 @{
@@ -91,7 +119,7 @@
                         @Html.Action("GridViewPartial_facturas_con_saldos")
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onclick="">Aceptar</button>
+                        <button type="button" class="btn btn-primary" onclick="seleccionar_aprobacion();">Aceptar</button>
                         <button type="button" class="btn btn-default" onclick="cerrar();">Close</button>
                     </div>
                 </div>
