--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito_det.cshtml
@@ -1,15 +1,15 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_ordenes_pagos_con_saldo";
-        settings.CallbackRouteValues = new { Controller = "OrdenPago", Action = "GridViewPartial_ordenes_pagos_con_saldo" };
+        settings.Name = "GridViewPartial_nota_credito_det";
+        settings.CallbackRouteValues = new { Controller = "NotaCredito", Action = "GridViewPartial_nota_credito_det" };
         settings.KeyFieldName = "IdOrdenPago";
         settings.Width = Unit.Percentage(100);
         //CConfiguracion responsive
 
 
         settings.SettingsEditing.Mode = GridViewEditingMode.EditForm;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "OrdenPago", Action = "EditingCheckUncheck", Area = "CuentasPorPagar" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaCredito", Action = "EditingCheckUncheck", Area = "CeuntasPorPagar" };
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowEditButton = true;
